<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="extensions_title">SnowHouse</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="default_text">Default</string>
    <string name="dlg_ok">OK</string>
    <string name="attention">Attention</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="reset_colors">Reset colors</string>
    <string name="reset_android">Android</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="misc_title">Miscellaneous</string>
    <string name="status_bar_category">Statusbar</string>
    <string name="system_category">System</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="hardware_category">Hardware</string>
    <string name="build_tweaks_summary_title">Things are really cold here!</string>
    <string name="listview">ListView</string>
    <string name="misc_category">Misc Settings</string>
    <string name="fingerprint_category">FP Sensor</string>
    <string name="qs_category">Quick Settings</string>
    <string name="power_key">Power Button</string>
    <string name="volume_keys">Volume Buttons</string>
    <string name="lockscreen_gestures_category">LockScreen Gesture</string>
    <string name="battery_settings_title">Battery Settings</string>
    <string name="gestures_category">Gestures Customizations</string>
    <string name="extensions_dialog_title">Help us help you!</string>
    <string name="extensions_dialog_message">If you find a bug with any of these settings, report it in our Telegram Group. You MUST include the following when posting a bug report:\n\n1. A logcat or last_kmsg\n2. Kernel and mods used\n3. Useful information\n\nIf you fail to report something adequately, DO NOT expect things to be fixed.</string>
    <string name="extensions_dialog_toast">READ THE WHOLE THING!</string>
    <string name="artwork_media_fade_level_summary">Fading the media artwork image</string>
    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
    <string name="quick_settings_vibrate_summary">Vibrate when touching QS tiles</string>
    <string name="show_fourg_icon_title">4G icon</string>
    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>
    <string name="volte_icon_title">VoLTE icon</string>
    <string name="volte_icon_summary">Display VoLTE icon when available</string>
    <string name="vowifi_icon_title">VoWiFi icon</string>
    <string name="vowifi_icon_summary">Display VoWiFi icon when available</string>
    <string name="volte_vowifi_override_title">VoWiFi override</string>
    <string name="volte_vowifi_override_summary">Hide VoLTE when VoWiFi is available</string>
    <string name="incall_vibration_category">In-call vibration options</string>
    <string name="incall_vibrate_connect_title">Vibrate on connect</string>
    <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
    <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
    <string name="statusbar_items_title">Statusbar items</string>
    <string name="double_tap_sleep_gesture_title">Tap to sleep</string>
    <string name="double_tap_sleep_gesture_summary">Double-tap anywhere on the status bar to put the device to sleep</string>
    <string name="lockscreen_tweaks_category_title">What to do</string>
    <string name="double_tap_sleep_lockscreen_title">Double tap to sleep on lockscreen</string>
    <string name="notification_sound_vib_screen_on_title">Annoying Notifications</string>
    <string name="notification_sound_vib_screen_on_summary">Play sound and vibration for notifications when screen is on</string>
    <string name="volume_rocker_music_controls_title">Playback control</string>
    <string name="volume_rocker_music_controls_summary">When the screen is off, long-pressing the volume keys will seek music tracks</string>
    <string name="volume_rocker_wake_title">Volume rocker wake</string>
    <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="lockscreen_battery_info_summary">Show charging current, voltage, wattage and battery temperature on lockscreen while charging</string>
    <string name="fprint_sucess_vib_title">Fingerprint success vibration</string>
    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
    <string name="fprint_error_vib_title">Fingerprint error vibration</string>
    <string name="fprint_error_vib_summary">Vibrate on failed fingerprint authentication</string>
    <string name="wake_when_plugged_or_unplugged_title">Wake on plug</string>
    <string name="wake_when_plugged_or_unplugged_summary">Turn the screen on when connecting or disconnecting a power source</string>
    <string name="status_bar_quick_qs_pulldown">Quick QS pulldown</string>
    <string name="quick_pulldown_none">Disabled</string>
    <string name="quick_pulldown_right">Pulldown statusbar from right side</string>
    <string name="quick_pulldown_left">Pulldown statusbar from left side</string>
    <string name="qs_brightness_slider_category">Brightness slider</string>
    <string name="qs_show_brightness_slider_title">Brightness slider</string>
    <string name="qs_show_brightness_slider_never">Never show</string>
    <string name="qs_show_brightness_slider_expanded">Show when expanded</string>
    <string name="qs_show_brightness_slider_always">Show always</string>
    <string name="qs_show_brightness_slider_not_expanded">Show when not expanded</string>
    <string name="qs_brightness_slider_position_title">Position</string>
    <string name="qs_brightness_slider_position_top">Top</string>
    <string name="qs_brightness_slider_position_bottom">Bottom</string>
    <string name="qs_show_auto_brightness_title">Auto brightness icon</string>
    <string name="qs_show_auto_brightness_summary">Show toggle for adaptive brightness near the slider</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
    <string name="gestures_title">Nav Bar Gesture Customisations</string>
    <string name="gestures_summary">Take Your Pill</string>
    <string name="lockscreen_media_category">Lock screen media</string>
    <string name="media_art_title">Media cover art</string>
    <string name="media_art_summary">Enable media cover art on the lockscreen</string>
    <string name="search">Search</string>
    <string name="search_apps">Search apps</string>
    <string name="use_old_mobiletype_title">Small mobile type icon</string>
    <string name="use_old_mobiletype_summary">Show mobile type icon on top of the signal indicator</string>
    <string name="power_menu_title">Power menu</string>
    <string name="power_menu_title_summary">View or change power menu entries</string>
    <string name="powermenu_screenshot">Screenshot</string>
    <string name="powermenu_power">Power</string>
    <string name="powermenu_advanced">Advanced reboot options</string>
    <string name="powermenu_restart">Restart</string>
    <string name="powermenu_airplane">Airplane</string>
    <string name="powermenu_settings">Settings</string>
    <string name="powermenu_lockdown">Lock Down</string>
    <string name="powermenu_soundpanel">Sound Panel</string>
    <string name="powermenu_users">Users</string>
    <string name="powermenu_logout">Logout</string>
    <string name="powermenu_emergency">Emergency</string>
    <string name="enable_fingerprint_ripple_effect_title">Ripple effect</string>
    <string name="enable_fingerprint_ripple_effect_summary">Show ripple effect on unlock with fingerprint</string>
    <string name="location_privacy_title"> Show Location Privacy Indicator</string>
    <string name="location_privacy_summary">Enable - Disable location privacy indicator in qs and sb</string>
    <string name="traffic_title">Traffic indicators</string>
    <string name="traffic_summary">Customize the traffic indicators</string>
    <string name="network_traffic_autohide_threshold_title">Auto-hide threshold</string>
    <string name="network_traffic_location_title">Location</string>
    <string name="network_traffic_disabled">Disabled</string>
    <string name="network_traffic_statusbar">Status bar</string>
    <string name="network_traffic_qs_header">QS header</string>
    <string name="network_traffic_refresh_interval_title">Refresh interval</string>
    <string name="network_traffic_mode_title">Display mode</string>
    <string name="network_traffic_dynamic">Dynamic</string>
    <string name="network_traffic_download">Download</string>
    <string name="network_traffic_upload">Upload</string>
    <string name="status_bar_clock_title">Clock &amp; date</string>
    <string name="status_bar_clock_summary">Customize clock &amp; date</string>
    <string name="status_bar_clock_seconds_title">Clock seconds</string>
    <string name="status_bar_clock_seconds_summary">Display seconds next to clock in status bar</string>
    <string name="status_bar_clock_position_title">Clock style</string>
    <string name="status_bar_clock_position_right">Right</string>
    <string name="status_bar_clock_position_left">Left</string>
    <string name="status_bar_clock_position_center">Center</string>
    <string name="status_bar_clock_position_hidden">Hidden</string>
    <string name="status_bar_clock_auto_hide_title">Auto hide</string>
    <string name="status_bar_clock_auto_hide_launcher_summary">Hide clock if launcher is visible</string>
    <string name="status_bar_clock_auto_hide_summary">Hide clock at regular interval</string>
    <string name="status_bar_clock_auto_hide_hdur_title">Hide duration</string>
    <string name="status_bar_clock_auto_hide_hdur_summary">Number of seconds to hide clock</string>
    <string name="status_bar_clock_auto_hide_sdur_title">Show duration</string>
    <string name="status_bar_clock_auto_hide_sdur_summary">Number of seconds to wait before hiding clock</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="status_bar_am_pm_normal">Normal</string>
    <string name="status_bar_am_pm_small">Small</string>
    <string name="status_bar_am_pm_hidden">Hidden</string>
    <string name="status_bar_date_title">Date</string>
    <string name="status_bar_date_none">Hidden</string>
    <string name="status_bar_date_small">Small</string>
    <string name="status_bar_date_normal">Normal</string>
    <string name="status_bar_date_format_title">Date format</string>
    <string name="status_bar_date_style">Date style</string>
    <string name="status_bar_date_style_normal">Normal</string>
    <string name="status_bar_date_style_lowercase">Lowercase</string>
    <string name="status_bar_date_style_uppercase">Uppercase</string>
    <string name="status_bar_date_format_custom">Custom java format</string>
    <string name="status_bar_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="status_bar_date_string_edittext_summary">Enter string</string>
    <string name="clock_date_position">Date position</string>
    <string name="clock_date_right">Right of time</string>
    <string name="clock_date_left">Left of time</string>
    <string name="unit_milliseconds">milliseconds</string>
    <string name="unit_percent" translatable="false">\u0025</string>
    <string name="unit_pixels" translatable="false">dp</string>
</resources>