<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory
        android:title="@string/power_key" >

    <Preference
	     android:key="power_menu"
             android:title="@string/power_menu_title"
             android:summary="@string/power_menu_title_summary"
	     android:fragment="org.pixelextended.pextension.fragments.PowerMenuSettings" />

    </PreferenceCategory>

   <PreferenceCategory
            android:key="volume_keys"
            android:title="@string/volume_keys" >

        <Preference
            android:key="volume_button_music_control_sumary"
            android:title="@string/volume_button_music_control_title"
            android:fragment="com.android.settings.gestures.VolumeButtonMusicControlGestureSettings"
            settings:controller="com.android.settings.gestures.VolumeButtonMusicControlPreferenceController" />

    <com.android.settings.custom.preference.SystemSettingListPreference
            android:key="volume_key_cursor_control"
            android:title="@string/volbtn_cursor_control_title"
            android:entries="@array/volbtn_cursor_control_entries"
            android:entryValues="@array/volbtn_cursor_control_values"
            android:summary="%s"
            android:defaultValue="0" />

<!--    <com.android.settings.custom.preference.SystemSettingSwitchPreference
            android:key="volume_rocker_wake"
            android:summary="@string/volume_rocker_wake_summary"
            android:title="@string/volume_rocker_wake_title"
            android:defaultValue="false" /> -->

    </PreferenceCategory>

    <PreferenceCategory
        android:key="lockscreen_ui_finterprint_category"
        android:title="@string/fingerprint_category">

    <com.android.settings.custom.preference.SystemSettingSwitchPreference
        android:key="fingerprint_success_vib"
        android:title="@string/fprint_sucess_vib_title"
        android:summary="@string/fprint_sucess_vib_summary"
        android:persistent="true" />

    <com.android.settings.custom.preference.SystemSettingSwitchPreference
        android:key="fingerprint_error_vib"
        android:title="@string/fprint_error_vib_title"
        android:summary="@string/fprint_error_vib_summary"
        android:persistent="true" />

    </PreferenceCategory>

</PreferenceScreen>
